feat: add last commit info
